--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+  "build": "vite build",
+  "preview": "vite preview",
+  "start": "vite"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
